# tal-annotation-labeling

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  split_dataset.py
.github/: copilot-instructions.md
codes/ActionFormer/: README.md  __init__.py  _upstream.py
codes/VideoMAEv2/: README.md  download_hf.py  extract_features.py
codes/common/: analyze_annotations.py
codes/vlm/: __init__.py  qwen_local.py  segment_frames.py
docs/: slurm.md  util.md  wandb-run-templates.md
docs/conversations/: 2026-04-27-tal-design.md  2026-04-28-implementation-plan.md  2026-04-28-progress.md  2026-04-29-actionformer-action-type-plan.md  2026-04-29-actionformer-binary-mode.md  2026-04-29-feature-extraction-optimization-log.md  2026-04-29-multiclass-transition-log.md  2026-04-29-progress-update-step-wandb.md
docs/informations/: E2E-TAD.md  TadTR.md  VideoMAEv2.md
docs/okamura_note/: VideoMAEv2に関する技術的メモ.md
scripts/: build_action_type_vocab.py  build_combined_vocab.py  check_tal_training_inputs.py  eval_tal.py  export_unique_action_labels.py  extract_features_gpu0_16gb.sh  extract_features_parallel.sh  extract_features_single_gpu.sh  infer_tal.py  json_to_plaintext.py  pipeline_tal_vlm.py  plot_label_distribution.py  prepare_tal_training.sh  run_checkpoint_infer_test.py  run_extract_features_2gpu.sh  run_tal_training.sh  submit_extract_sharded.sh  train_tal.py  train_test.sh  train_test_split.py  train_val_test_split.py  wandb_utils.py
scripts/ActionFormer_train/: 1k_train.sh  25k_train.sh  25k_train_100epochs_16batches.sh  25k_train_100epochs_32batches.sh  25k_train_10epochs_16batches.sh  25k_train_10epochs_32batches.sh
scripts/sbatch/: sbatch_25k_train_100epochs_16batches.sh  sbatch_25k_train_100epochs_32batches.sh  sbatch_all_binary_train_1gpu.sh  sbatch_infer_test_all_binary_1gpu.sh  sbatch_pipeline_tal_vlm_1gpu.sh  (+2 more)
(+18 files in other folders)
