[project]
name = "tal-annotation-labeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decord>=0.6.0",
    "einops>=0.8.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "timm>=0.6.0,<0.9.0",
    # GPU node has NVIDIA driver supporting up to CUDA 12.2; pin torch to a
    # cu121 build (see [tool.uv.sources] below).
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
